--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL='mysql://ln1my788vgzegujqmv8d:************@aws.connect.psdb.cloud/barbearia?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://w4q1t8ml3hjyn27fou1u:************@aws.connect.psdb.cloud/barbearia?ssl={"rejectUnauthorized":true}'
 
 const express = require('express');
 const bodyParser = require('body-parser');
